--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,9 @@
     "about": "About",
     "services": "Services",
     "pricing": "Pricing",
-    "contact": "Contact"
+    "contact": "Contact",
+    "title": "Share Across Platforms, Instantly!",
+    "description": "Download and repost videos across YouTube, TikTok, and Instagram with a single click.",
+    "inputPlaceholder": "Enter YouTube, TikTok, or Instagram Reel URL...",
+    "footerText": "Made with ♡ by"
   }
